# Onboarding-SecOps

./: .gitignore  main.py  pyproject.toml  relatorio_auditoria.md
.github/workflows/: security.yml
