[tool.poetry]
name = "secops-audit"
version = "0.1.0"
description = "Projeto auditável com pipeline de segurança Zero Trust"
authors = ["João Costa <joao.costa@empresa.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
bandit = { version = "^1.8.3", extras = ["toml"] }
pip-audit = "^2.9.0"
ruff = "^0.11.4"

[tool.bandit]
exclude_dirs = [".venv", "tests"]
skips = []

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "S", "I"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
